# webcam_libuvc

./: .gitmodules  CMakeLists.txt
.cache/clangd/index/: ctrl-gen.c.5CC746941073A7C1.idx  ctrl.c.BA16950B3FF92F69.idx  device.c.E85BE3906FB19321.idx  diag.c.5A854C99D6147DB0.idx  example.c.C77A323E6723966E.idx  frame.c.3EA7532DD1335C6B.idx  init.c.CFF7EEE588BB432E.idx  libuvc.h.7049E336C821D9DF.idx  libuvc_internal.h.112ADF6BA1BD0A50.idx  main.cpp.C645EEECDC8CC207.idx  misc.c.E6DC15E3C3F75E66.idx  stream.c.29E5F07B8A708F1D.idx  utlist.h.47E7D53CE5483BF6.idx
src/: main.cpp
